<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/btn_room_title" />

        <Button
            android:id="@+id/btn_preference"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_preference_title" />

        <Button
            android:id="@+id/btn_proto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/btn_proto_title"
            />
    </LinearLayout>

</ScrollView>